<resources>
    <string name="app_name">SurveryApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration_success_msg">Registration Successfull!! Please login</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_age">Enter Age</string>
    <string name="last_education">Enter Last Education</string>
    <string name="want_to_be">Want to be</string>
    <string name="save_survey">Save Survey</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="survey_saved_successfully">Survey Saved</string>
    <string name="survey_failed">Survey Failed</string>
    <string name="user_already_exists">User Already Exists</string>
</resources>